--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Kishurit",
-  "name": "Kisurit, index of employment websites",
+  "name": "Kisurit, index of Israeli businesses website",
   "icons": [
     {
       "src": "newjob.jpg",
