--- a/package.json
+++ b/package.json
@@ -5,8 +5,15 @@
   "description": "Index of businesses",
   "author": "Roman Braverman",
   "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "deploy": "gh-pages -d build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
     "@hookform/resolvers": "^3.3.2",
     "@octokit/plugin-create-or-update-text-file": "^4.0.1",
     "@octokit/rest": "^20.0.2",
@@ -17,51 +24,31 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "lodash": "^4.17.21",
-    "octokit": "^3.1.2",
-    "react": "^18.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.0.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "redux": "^4.2.1",
-    "strapi-provider-email-brevo": "^1.0.4",
     "styled-components": "^6.1.1",
     "web-vitals": "^1.1.2",
     "yup": "^1.3.2"
   },
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
-    "gh-pages": "^6.0.0"
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.54.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.4",
+    "gh-pages": "^6.0.0",
+    "vite": "^5.0.0"
   }
 }
