--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -34,7 +35,7 @@
     "react-notifications": "^1.7.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^6.1.1",
     "web-vitals": "^1.1.2",
