--- a/package.json
+++ b/package.json
@@ -1,16 +1,9 @@
 {
   "name": "kishurit",
   "version": "0.1.0",
-  "description": "Index of businesses website",
+  "description": "Index of employment websites",
   "author": "Roman Braverman",
   "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@octokit/plugin-create-or-update-text-file": "^4.0.1",
@@ -21,7 +14,6 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
-    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -39,14 +31,33 @@
     "web-vitals": "^1.1.2",
     "yup": "^1.3.2"
   },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "set \"GENERATE_SOURCEMAP=false\" &&  react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.54.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "vite": "^5.0.0"
+    "gh-pages": "^6.1.0"
   }
 }
