--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@octokit/rest": "^20.0.2",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "lodash": "^4.17.21",
@@ -25,17 +25,15 @@
     "react-notifications": "^1.7.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.4",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^6.1.1",
-    "web-vitals": "^1.1.2",
+    "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "set \"GENERATE_SOURCEMAP=false\" &&  react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -56,8 +54,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.0"
   }
 }
