--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap-typeahead": "^6.3.2",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-ga4-gtag": "^1.0.2",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-notifications": "^1.7.4",
